# asuka-api

./: .env.example  .gitignore  Dockerfile  README.md  app.py  code.txt  dall_e_test.py  pyproject.toml  requirements.txt  util.py
clients/: anthropic_client.py  openai_client.py
experiments/: gemini.py
personas/: asuka.py  grog.py  hermione.py  persona.py
scripts/: download_models.py
src/: app.py
src/clients/: .openai_client.py.swp  anthropic_client.py  base_client.py  openai_client.py
src/personas/: .hermione.py.swp  asuka.py  grog.py  hermione.py  persona.py  sensei.py
