[tool.poetry]
name = "asuka-api"
version = "0.1.0"
description = ""
authors = ["Andrew Wong <wongwong.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
transformers = "^4.40.1"
openai = "^1.25.2"
torch = "^2.3.0"
google-generativeai = "^0.7.0"
google-cloud-aiplatform = ">=1.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
