[tool.poetry]
name = "asuka-api"
version = "0.1.0"
description = ""
authors = ["Andrew Wong <wongwong.wong@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
openai = "^1.25.2"
anthropic = "^0.29.0"
google-api-python-client = "^2.170.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
